--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:valpinkman/react-silicon-life.git",
   "author": "Valentin D. Pinkman <valentin.d.pinkman@icloud.com>",
   "license": "MIT",
+  "browserslist": [
+    "last 3 Chrome versions"
+  ],
   "scripts": {
     "start": "parcel src/index.html",
     "dev": "concurrently -r \"npm run watch-ts\" \"npm start\"",
@@ -19,15 +22,23 @@
     "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "firebase": "^7.5.2",
+    "navi": "^0.13.6",
+    "react": "^0.0.0-experimental-b53ea6ca0",
+    "react-dom": "^0.0.0-experimental-b53ea6ca0",
+    "react-markdown": "^4.2.2",
+    "react-mde": "^7.8.0",
+    "react-navi": "^0.13.6",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@now/node": "^1.2.1",
     "@testing-library/react": "^9.3.2",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
     "@types/testing-library__react": "^9.1.2",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -38,6 +49,7 @@
     "eslint-plugin-react": "^7.17.0",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
+    "now": "^16.6.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.12.0",
