--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "semi": ["error", "never"],
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/explicit-member-accessibility": 0
+    "@typescript-eslint/explicit-member-accessibility": 0,
+    "@typescript-eslint/ban-ts-ignore": 1
   }
 }
